# chuchi-postgres

./: Cargo.toml
.github/workflows/: ci.yaml
chuchi-postgres/: Cargo.toml
chuchi-postgres-derive/: Cargo.toml
chuchi-postgres-derive/src/: lib.rs
chuchi-postgres-types/: Cargo.toml
chuchi-postgres-types/src/: uid.rs
chuchi-postgres-types/src/time/: date.rs  datetime.rs
chuchi-postgres/src/: connection.rs  database.rs  db.rs  lib.rs  migrations.rs
chuchi-postgres/src/filter/: mod.rs  whr.rs
chuchi-postgres/src/macros/: mod.rs
chuchi-postgres/src/table/: table.rs  table_owned.rs
chuchi-postgres/tests/: tabletempl.rs
